Added unit tests and testfiles